--- a/src/components/Widget/components/Launcher/style.scss
+++ b/src/components/Widget/components/Launcher/style.scss
@@ -58,6 +58,9 @@
 @media screen and (max-width: $fullscreen-break) {
   .rcw-launcher {
     @include launcher-fs;
+    margin: 0;
+    bottom: var(--anchor-mobile-bottom);
+    right: var(--anchor-mobile-right);
   }
 
   .rcw-hide-sm {
